--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,10 @@ development:
   <<: *default
   database: lemon_development
 
+staging:
+  <<: *default
+  database: lemon_staging  
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
