エラーなしのmaster

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,9 @@ development:
 
 staging:
   <<: *default
-  database: lemon_staging  
+  database: lemon_staging
+  username: lemon
+  password: <%= ENV['LEMON_DATABASE_PASSWORD'] %> 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
